@@ -37,7 +37,7 @@ static const R_CallMethodDef Callentries[] = {
     {"Cagfit4",       (DL_FUNC) &agfit4,      14},
     {"Cagmart3",      (DL_FUNC) &agmart3,      8},
     {"Cagscore2",     (DL_FUNC) &agscore2,     6},
-    {"Ccdecomp",      (DL_FUNC) &cdecomp,      2}
+    {"Ccdecomp",      (DL_FUNC) &cdecomp,      2},
     {"Cconcordance1", (DL_FUNC) &concordance1, 4}, 
     {"Cconcordance2", (DL_FUNC) &concordance2, 6}, 
     {"Cconcordance3", (DL_FUNC) &concordance3, 6},
