@@ -40,7 +40,7 @@ aeq(fit2$surv[deaths], cfit2$surv)
 
 fit3 <- survfit(Surv(start, stop, event) ~1, test2) #Kaplan-Meier
 aeq(fit3$n, 10)
-aeq(fit3$time, unique(test2$stop))
+aeq(fit3$time, sort(unique(test2$stop)))
 aeq(fit3$n.risk, c(2,3,5,4,4,5,2,1))
 aeq(fit3$n.event,c(1,1,1,1,1,2,0,0))
 aeq(fit3$surv[fit3$n.event>0], c(.5, 1/3, 4/15, 1/5, 3/20, 9/100))
